[package]
name = "vulkan-tutorial-ash"
version = "0.1.0"
authors = ["Adrien Bennadji <adrien.bennadji@live.fr>"]
edition = "2018"
build = "build.rs"

[dependencies]
log = "0.4"
env_logger = "0.7"
ash = { version = "0.37.3", default-features = false, features = ["linked", "debug"] }
ash-window = "0.12"
cgmath = "0.17"
image = "0.23"
tobj = "2.0"
winit = "0.28.0"
raw-window-handle = "0.5.0"
