[package]
name = "vulkan-tutorial-ash"
version = "0.1.0"
authors = ["Adrien Bennadji <adrien.bennadji@live.fr>"]
edition = "2018"
build = "build.rs"

[dependencies]
log = "0.4"
env_logger = "0.11"
ash = { version = "0.37", default-features = false, features = ["debug", "loaded"] }
ash-window = "0.12"
raw-window-handle = "0.5"
cgmath = "0.18"
image = "0.25"
tobj = "4.0"
ahash = "0.8"
winit = { version = "0.29", default-features = false, features = ["rwh_05", "x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita"]}
