[package]
name = "vulkan-tutorial-ash"
version = "0.1.0"
authors = ["Adrien Bennadji <adrien.bennadji@live.fr>"]
edition = "2021"
build = "build.rs"
rust-version = "1.77"

[dependencies]
log = "0.4"
env_logger = "0.11"
ash = "0.38"
ash-window = "0.13"
raw-window-handle = "0.6"
cgmath = "0.18"
image = "0.25"
tobj = "4.0"
ahash = "0.8"
winit = "0.29"
